--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/generated/
 
 # PyBuilder
 target/
@@ -129,3 +130,5 @@ dmypy.json
 .pyre/
 
 .idea/
+
+.DS_Store
